--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -63,22 +63,82 @@
             </objects>
             <point key="canvasLocation" x="1890.4000000000001" y="-646.32683658170924"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Flight Table View Controller-->
         <scene sceneID="36m-UU-H5h">
             <objects>
-                <tableViewController id="CAR-mD-hds" sceneMemberID="viewController">
+                <tableViewController id="CAR-mD-hds" customClass="FlightTableViewController" customModule="AirBoard" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="G1y-cV-Zci">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Y0f-Mi-fjJ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FlightCell" rowHeight="70" id="Y0f-Mi-fjJ" customClass="FlightTableViewCell" customModule="AirBoard" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y0f-Mi-fjJ" id="Tnx-tV-zZx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y0f-Mi-fjJ" id="Tnx-tV-zZx" customClass="FlightTableViewCell" customModule="AirBoard" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Departure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1y-Mv-iFu">
+                                            <rect key="frame" x="16" y="11" width="78" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZn-cK-syh">
+                                            <rect key="frame" x="310" y="11" width="49" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJT-Bv-X3n">
+                                            <rect key="frame" x="102" y="11" width="38" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73U-Rf-0Na">
+                                            <rect key="frame" x="260" y="11" width="38" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-VH-EEg">
+                                            <rect key="frame" x="16" y="38" width="39" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QM6-uC-Vc0">
+                                            <rect key="frame" x="320" y="37" width="39" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="hZn-cK-syh" firstAttribute="leading" secondItem="73U-Rf-0Na" secondAttribute="trailing" constant="12" id="1Y8-Cc-CtI"/>
+                                        <constraint firstItem="eJT-Bv-X3n" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="4e3-OQ-E7x"/>
+                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="trailing" secondItem="Tnx-tV-zZx" secondAttribute="trailingMargin" id="FNr-vO-Ev8"/>
+                                        <constraint firstItem="mu6-VH-EEg" firstAttribute="leading" secondItem="Tnx-tV-zZx" secondAttribute="leadingMargin" id="G4d-ao-Kuf"/>
+                                        <constraint firstItem="eJT-Bv-X3n" firstAttribute="leading" secondItem="r1y-Mv-iFu" secondAttribute="trailing" constant="8" id="OKY-wt-mRF"/>
+                                        <constraint firstItem="r1y-Mv-iFu" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="Pdk-0l-5vp"/>
+                                        <constraint firstItem="73U-Rf-0Na" firstAttribute="leading" secondItem="eJT-Bv-X3n" secondAttribute="trailing" constant="120" id="Wz6-aG-5mW"/>
+                                        <constraint firstItem="r1y-Mv-iFu" firstAttribute="leading" secondItem="Tnx-tV-zZx" secondAttribute="leadingMargin" id="Z8U-Jf-fLV"/>
+                                        <constraint firstItem="hZn-cK-syh" firstAttribute="trailing" secondItem="Tnx-tV-zZx" secondAttribute="trailingMargin" id="oOd-Pd-WOg"/>
+                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="leading" secondItem="mu6-VH-EEg" secondAttribute="trailing" constant="265" id="ogm-3q-1Ev"/>
+                                        <constraint firstItem="mu6-VH-EEg" firstAttribute="top" secondItem="r1y-Mv-iFu" secondAttribute="bottom" constant="6" id="oip-46-Yak"/>
+                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="top" secondItem="hZn-cK-syh" secondAttribute="bottom" constant="5" id="pdX-37-sSM"/>
+                                        <constraint firstItem="73U-Rf-0Na" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="xXT-nc-3AZ"/>
+                                        <constraint firstItem="hZn-cK-syh" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="zTY-b7-vHU"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="arrivalICAO" destination="QM6-uC-Vc0" id="YuU-jl-0rz"/>
+                                    <outlet property="arrivalTimeLabel" destination="73U-Rf-0Na" id="QLK-Re-4h8"/>
+                                    <outlet property="departureICAO" destination="mu6-VH-EEg" id="Qv5-ZN-tij"/>
+                                    <outlet property="departureTimeLabel" destination="eJT-Bv-X3n" id="oCN-r5-r1Z"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
