Changed the implementation of serialization of data received in the JSON response format

--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -72,72 +72,89 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FlightCell" rowHeight="70" id="Y0f-Mi-fjJ" customClass="FlightTableViewCell" customModule="AirBoard" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FlightCell" rowHeight="100" id="Y0f-Mi-fjJ" customClass="FlightTableViewCell" customModule="AirBoard">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y0f-Mi-fjJ" id="Tnx-tV-zZx" customClass="FlightTableViewCell" customModule="AirBoard" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Departure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1y-Mv-iFu">
-                                            <rect key="frame" x="16" y="11" width="78" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZn-cK-syh">
-                                            <rect key="frame" x="310" y="11" width="49" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJT-Bv-X3n">
-                                            <rect key="frame" x="102" y="11" width="38" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73U-Rf-0Na">
-                                            <rect key="frame" x="260" y="11" width="38" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-VH-EEg">
-                                            <rect key="frame" x="16" y="38" width="39" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QM6-uC-Vc0">
-                                            <rect key="frame" x="320" y="37" width="39" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="atC-mG-wqz" userLabel="Final">
+                                            <rect key="frame" x="28.5" y="25.5" width="318.5" height="49"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oK0-3E-cTB" userLabel="Departure">
+                                                    <rect key="frame" x="0.0" y="0.0" width="123.5" height="49"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="uSw-gz-eAE">
+                                                            <rect key="frame" x="0.0" y="0.0" width="77.5" height="49"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Departure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1y-Mv-iFu">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="77.5" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-VH-EEg">
+                                                                    <rect key="frame" x="0.0" y="28.5" width="77.5" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJT-Bv-X3n">
+                                                            <rect key="frame" x="85.5" y="14" width="38" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kph-6l-3Dj" userLabel="Arrival">
+                                                    <rect key="frame" x="223.5" y="0.0" width="95" height="49"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JoU-Lo-L8d">
+                                                            <rect key="frame" x="0.0" y="0.0" width="49" height="49"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZn-cK-syh">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="49" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QM6-uC-Vc0">
+                                                                    <rect key="frame" x="0.0" y="28.5" width="49" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73U-Rf-0Na">
+                                                            <rect key="frame" x="57" y="14" width="38" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="318.5" id="c4r-rZ-Hgy"/>
+                                                <constraint firstAttribute="height" constant="49" id="vV8-7V-gyq"/>
+                                            </constraints>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="hZn-cK-syh" firstAttribute="leading" secondItem="73U-Rf-0Na" secondAttribute="trailing" constant="12" id="1Y8-Cc-CtI"/>
-                                        <constraint firstItem="eJT-Bv-X3n" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="4e3-OQ-E7x"/>
-                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="trailing" secondItem="Tnx-tV-zZx" secondAttribute="trailingMargin" id="FNr-vO-Ev8"/>
-                                        <constraint firstItem="mu6-VH-EEg" firstAttribute="leading" secondItem="Tnx-tV-zZx" secondAttribute="leadingMargin" id="G4d-ao-Kuf"/>
-                                        <constraint firstItem="eJT-Bv-X3n" firstAttribute="leading" secondItem="r1y-Mv-iFu" secondAttribute="trailing" constant="8" id="OKY-wt-mRF"/>
-                                        <constraint firstItem="r1y-Mv-iFu" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="Pdk-0l-5vp"/>
-                                        <constraint firstItem="73U-Rf-0Na" firstAttribute="leading" secondItem="eJT-Bv-X3n" secondAttribute="trailing" constant="120" id="Wz6-aG-5mW"/>
-                                        <constraint firstItem="r1y-Mv-iFu" firstAttribute="leading" secondItem="Tnx-tV-zZx" secondAttribute="leadingMargin" id="Z8U-Jf-fLV"/>
-                                        <constraint firstItem="hZn-cK-syh" firstAttribute="trailing" secondItem="Tnx-tV-zZx" secondAttribute="trailingMargin" id="oOd-Pd-WOg"/>
-                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="leading" secondItem="mu6-VH-EEg" secondAttribute="trailing" constant="265" id="ogm-3q-1Ev"/>
-                                        <constraint firstItem="mu6-VH-EEg" firstAttribute="top" secondItem="r1y-Mv-iFu" secondAttribute="bottom" constant="6" id="oip-46-Yak"/>
-                                        <constraint firstItem="QM6-uC-Vc0" firstAttribute="top" secondItem="hZn-cK-syh" secondAttribute="bottom" constant="5" id="pdX-37-sSM"/>
-                                        <constraint firstItem="73U-Rf-0Na" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="xXT-nc-3AZ"/>
-                                        <constraint firstItem="hZn-cK-syh" firstAttribute="top" secondItem="Tnx-tV-zZx" secondAttribute="topMargin" id="zTY-b7-vHU"/>
+                                        <constraint firstItem="atC-mG-wqz" firstAttribute="centerY" secondItem="Tnx-tV-zZx" secondAttribute="centerY" id="Liy-IF-5CT"/>
+                                        <constraint firstItem="atC-mG-wqz" firstAttribute="centerX" secondItem="Tnx-tV-zZx" secondAttribute="centerX" id="Rx7-K7-na1"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="arrivalICAO" destination="QM6-uC-Vc0" id="YuU-jl-0rz"/>
-                                    <outlet property="arrivalTimeLabel" destination="73U-Rf-0Na" id="QLK-Re-4h8"/>
-                                    <outlet property="departureICAO" destination="mu6-VH-EEg" id="Qv5-ZN-tij"/>
-                                    <outlet property="departureTimeLabel" destination="eJT-Bv-X3n" id="oCN-r5-r1Z"/>
+                                    <outlet property="arrivalICAOLabel" destination="QM6-uC-Vc0" id="yMS-Ij-3Lh"/>
+                                    <outlet property="arrivalTimeLabel" destination="73U-Rf-0Na" id="zid-eg-jik"/>
+                                    <outlet property="departureICAOLabel" destination="mu6-VH-EEg" id="HcM-0Q-7QJ"/>
+                                    <outlet property="departureTimeLabel" destination="eJT-Bv-X3n" id="yXZ-Ee-r2u"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -150,7 +167,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H3L-hM-Z3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2770" y="-646"/>
+            <point key="canvasLocation" x="2768.8000000000002" y="-646.32683658170924"/>
         </scene>
     </scenes>
 </document>
