--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ecf-eU-oE9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="779-0R-AaX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,7 +24,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VJu-t4-xo1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2829.5999999999999" y="18.440779610194905"/>
+            <point key="canvasLocation" x="3768.8000000000002" y="18.440779610194905"/>
         </scene>
         <!--Airports-->
         <scene sceneID="Lwm-bo-lWG">
@@ -36,15 +36,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Qqr-sf-Rbr"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AirportCell" id="uqM-2R-yH0" customClass="AirportTableViewCell" customModule="AirBoard" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AirportCell" rowHeight="100" id="uqM-2R-yH0" customClass="AirportTableViewCell" customModule="AirBoard" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uqM-2R-yH0" id="IEG-GY-uj3">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xpM-5j-I4g">
-                                            <rect key="frame" x="97" y="11.5" width="181.5" height="20.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="00c-dg-zre">
+                                            <rect key="frame" x="16" y="11" width="343" height="77.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airport name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsw-37-Fok">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
@@ -53,13 +53,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibc-vn-tt9">
-                                                    <rect key="frame" x="105" y="0.0" width="30.5" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="28.5" width="30.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnb-wb-P8p">
-                                                    <rect key="frame" x="140.5" y="0.0" width="41" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="57" width="41" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -68,8 +68,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="xpM-5j-I4g" firstAttribute="centerY" secondItem="IEG-GY-uj3" secondAttribute="centerY" id="ejI-f9-WaS"/>
-                                        <constraint firstItem="xpM-5j-I4g" firstAttribute="centerX" secondItem="IEG-GY-uj3" secondAttribute="centerX" id="z5F-C9-hrH"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="00c-dg-zre" secondAttribute="trailing" id="ZVq-nS-SJk"/>
+                                        <constraint firstItem="00c-dg-zre" firstAttribute="top" secondItem="IEG-GY-uj3" secondAttribute="topMargin" id="o53-gb-0h6"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="00c-dg-zre" secondAttribute="bottom" constant="0.5" id="tUt-Pv-ReT"/>
+                                        <constraint firstItem="00c-dg-zre" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leadingMargin" id="tX2-mk-e37"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -99,7 +101,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="839.20000000000005" y="-314.39280359820094"/>
+            <point key="canvasLocation" x="1778.4000000000001" y="-314.39280359820094"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="MYo-JH-68v">
@@ -117,7 +119,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tge-rm-F4p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1828" y="-314.39280359820094"/>
+            <point key="canvasLocation" x="2767.1999999999998" y="-314.39280359820094"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="qbO-Uc-4U0">
@@ -136,7 +138,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bfn-Cq-vag" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2829.5999999999999" y="-646.32683658170924"/>
+            <point key="canvasLocation" x="3768.8000000000002" y="-646.32683658170924"/>
         </scene>
         <!--Flight Table View Controller-->
         <scene sceneID="36m-UU-H5h">
@@ -242,25 +244,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H3L-hM-Z3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3708" y="-646.32683658170924"/>
+            <point key="canvasLocation" x="4647.1999999999998" y="-646.32683658170924"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="oVP-ox-t4B">
+        <scene sceneID="PU7-j6-3QM">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ecf-eU-oE9" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="779-0R-AaX" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FGo-28-hj4">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="W0n-J5-gDn">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="QVi-Rs-yjK" kind="relationship" relationship="rootViewController" id="vls-tu-rtb"/>
+                        <segue destination="QVi-Rs-yjK" kind="relationship" relationship="rootViewController" id="rKj-Lv-Puh"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rcq-S6-vLL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="djw-9w-Gvs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-100" y="-314.39280359820094"/>
+            <point key="canvasLocation" x="839.20000000000005" y="-314.39280359820094"/>
         </scene>
     </scenes>
 </document>
